# CmakeStudy

./: README.md
conditionals/: CMakeLists.txt  main.cpp
linktostatic/: CMakeLists.txt  simple.cpp  simple.h
simplebuild/: CMakeLists.txt  simple.cpp
static/: CMakeLists.txt
